# ddf_lib

./: LICENSE  README.md  pyproject.toml
ExcelDDFAddin/: DEVELOPMENT.md  ExcelDDFAddin.sln  INSTALL.md  QUICKSTART.md  README.md  build-and-install.bat
ExcelDDFAddin/DDFLib/: CDT.cs  DDF.cs  DDFLib.csproj
ExcelDDFAddin/DDFLib.Tests/: DDFLib.Tests.csproj  DDFTests.cs
ExcelDDFAddin/ExcelDDFAddin/: DDFManager.cs  DDFRibbon.cs  DDFRibbon.xml  ExcelDDFAddin.csproj  ExcelHelpers.cs  ThisAddIn.cs
ddf_lib/: __init__.py  extract_ddf_files.py  schema.py
examples/: available_attributes.py  edit_cdt.py
samples/: construction and materials.ddf  glazing and shading.DDF  modified_construction_and_materials.DDF
samples/2A Glazing + Shading/: Glazing.cdt  InternalBlinds.cdt  Panes.cdt  WindowGas.cdt
